--- a/style/box.css
+++ b/style/box.css
@@ -382,13 +382,19 @@ b{font-weight:bold}
     background: transparent;
     padding-top: 0;
     margin:0;
+    justify-content: center;
 }
 .pagination ul{
     padding-bottom: 2px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
 }
 .pagination ul li{
     display: inline-block;
-    margin:0 8px 0 0;
+    margin:0 2px 0 0;
 }
 .pagination ul li span.pagetotal{
     display: table-cell;
@@ -399,22 +405,34 @@ b{font-weight:bold}
 }
 .pagination ul li span.pagecur, .pagination ul li a{
     display: table-cell;
-    width: 40px;
-    height: 40px;
+    width: 20px;
+    height: 20px;
     box-sizing: border-box;
-    font-size: 18px;
+    font-size: 16px;
     line-height: 26px;
     vertical-align: middle;
-    color:#666666;
+    color:#000000;
     font-weight: normal;
-    border: solid 1px rgba(0, 0, 0, .1);
+    border: none;
+    border-bottom: 2px solid transparent;
     text-align: center;
-    border-radius: 3px;
+}
+.pagination ul li a.btnPage{
+    width: 56px;
+    height: 56px;
+    border: 1px solid #8F8F8F!important;
+    border-radius: 100%;
+    font-weight: 900;
+    color: #666666;
+}
+.pagination ul li.vleft{
+    margin-right: 35px;
+}
+.pagination ul li.vright{
+    margin-left: 35px;
 }
 .pagination ul li a:hover, .pagination ul li span.pagecur {
-    color: #ffffff;
-    background-color: #000;
-    border-color: #000;
+    border-bottom-color: #151535;
 }
 .pagination a, .pagination a:visited{
     color: #666666;
@@ -463,9 +481,11 @@ b{font-weight:bold}
     margin: 0;
     width: 100%;
     display: block;
-    background-color: rgba(238, 238, 255, 1);
-    box-shadow: 0 0 20px 0 rgba(0, 0, 0, .1);
+    background-color: transparent;
+    /* background-color: rgba(238, 238, 255, 1); */
+    /* box-shadow: 0 0 20px 0 rgba(0, 0, 0, .1); */
     position: relative;
+    padding: 12px 0;
 }
 .breadcrumb.nomb{
     margin-bottom: 0;
@@ -485,28 +505,28 @@ b{font-weight:bold}
 .breadcrumb ul li{
     position: relative;
     display: inline-block;
-    font-size: 12px;
-    line-height: 20px;
+    font-size: 14px;
+    line-height: 22px;
     display: flex;
     align-items: center;
     align-content: center;
 }
 .breadcrumb ul li::after{
-    content: '';
-    width: 3.5px;
-    height: 3.5px;
-    border-radius: 100%;
-    background-color: rgba(144, 144, 196, 1);
+    content: '\f054';
+    font-family: 'Font Awesome 5 Free';
+    font-weight: 900;
     margin: 0 10px;
+    color: #b4b4b4;
 }
 .breadcrumb ul li:last-child::after{
     display: none;
 }
 .breadcrumb ul li, .breadcrumb ul li a {
-    color: rgba(144, 144, 196, 1);
+    color: #555577;
 }
 .breadcrumb ul li:last-child, .breadcrumb ul li:last-child a{
-    color: rgba(21, 21, 53, 1);
+    color: #1A1A1A;
+    font-weight: 600;
 }
 /*===================END: BREADCRUMB=========================*/
 /*===================BEGIN: SHARE NEWS TO SOCIAL NETWORK =========================*/
@@ -849,25 +869,22 @@ b{font-weight:bold}
     background: #9c1320;
     color: #ffffff;
 }
-
-
 /*==========================DANH M?C=================================*/
-@media screen and (max-width: 1200px){ 
-
-}
 @media screen and (max-width: 1024px){ 
     .desc img{ 
         max-width: 100% !important; 
         height: auto !important; 
     } 
-
 }
 @media all and (max-width: 991px){
-
-}
-@media all and (max-width: 380px){
-    .pagination ul li span.pagecur, .pagination ul li a{
-        width:35px;
-        height:35px;
+    .pagination ul li.vleft{
+        margin-right: 25px;
+    }
+    .pagination ul li.vright{
+        margin-left: 25px;
+    }
+    .pagination ul li a.btnPage{
+        width: 45px;
+        height: 45px;
     }
 }
